# keyboard_language_checker

./: README.md  language_checker.py  requirements.txt
cpp_checker/: CMakeLists.txt  keyboard_checker.cpp  keyboard_checker.h  log_config.h  logger.h  main.cpp
